--- a/package.json
+++ b/package.json
@@ -1,17 +1,43 @@
 {
   "name": "reactron",
+  "productName": "Reactron",
+  "description": "Reactron - React CRA (create-react-app) with Electron.js starter kit",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Xgraf/reactron.git"
+  },
+  "author": "Dmitriy Zatulovskiy <workroompost@gmail.com> (https://networkroom.ru)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Xgraf/reactron/issues"
+  },
   "private": true,
   "dependencies": {
+    "electron-is-dev": "^1.0.1",
+    "electron-log": "^2.2.17",
+    "electron-updater": "^4.0.6",
+    "electron-devtools-installer": "^2.2.4",
+    "node-notifier": "^5.3.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "reactstrap": "^7.0.2",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\"",
+    "prettier": "prettier --single-quote --write \"./src/**/*.js\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +47,30 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
+    "electron": "^4.0.1",
+    "electron-builder": "^20.38.4",
+    "electron-debug": "^2.0.0",
+    "prettier": "^1.15.3",
+    "wait-on": "^3.2.0"
+  },
+  "main": "public/electron.js",
+  "homepage": "./",
+  "build": {
+    "appId": "com.example.reactron",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    },
+    "publish": {
+      "provider": "github"
+    }
+  }
 }
